wrap up TCO leaderboards fixes

--- a/src/shared/components/Leaderboard/PodiumSpot/themes/styles.scss
+++ b/src/shared/components/Leaderboard/PodiumSpot/themes/styles.scss
@@ -40,7 +40,7 @@ $podium-border-color: #ededf2;
     display: flex;
     justify-content: space-around;
 
-    .stats, {
+    .stats {
       color: #747480;
       font-size: 15px;
       font-weight: 400;
