--- a/src/shared/components/Leaderboard/PodiumSpot/themes/tco22.scss
+++ b/src/shared/components/Leaderboard/PodiumSpot/themes/tco22.scss
@@ -83,8 +83,6 @@ $podium-border-color: #ededf2;
       .value-title,
       .value {
         color: #7f7f7f;
-      }
-      .value {
         font-family: Roboto, sans-serif;
         font-weight: 500;
       }
